Use htmlpreview.github.com to include script from master branch

--- a/uuid.html
+++ b/uuid.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>UUID Service Demo</title>
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-		<script src="https://raw.github.com/logicbomb/ng-directives/master/src/script/lvl-uuid.js"></script>
+		<script src="http://htmlpreview.github.io/?https://github.com/logicbomb/ng-directives/blob/master/src/script/lvl-uuid.js"></script>
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
