Include js file in gh-page branch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<ul>
-		<li><a href="demo/uuid.html">UUID service</a></li>
+		<li><a href="uuid.html">UUID service</a></li>
 	</ul>
 </body>
 </html>
