Add ng-app attribute

--- a/uuid.html
+++ b/uuid.html
@@ -5,7 +5,7 @@
 		<script src="script/lvl-uuid.js"></script>
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	</head>
-	<body>
+	<body ng-app="demoApp">
 		<div ng-controller='demoCtl'>
 			<div>
 				<span>
