Fixed bug that allows drop targets to also act as draggable

--- a/drag-drop.html
+++ b/drag-drop.html
@@ -88,7 +88,7 @@
 	
 				<div class="col-md-10">
 					<div ng-repeat="r in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]">
-						<span class="slot" ng-repeat="c in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></span>
+						<span class="slot" ng-repeat="c in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]" x-lvl-draggable='true' x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></span>
 					</div>
 				</div>
 			</div>
