XHR upload with progress service, directive, demo & test

--- a/drag-drop.html
+++ b/drag-drop.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Drag and Drop Demo</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 		<script src="script/lvl-uuid.js"></script>
 		<script src="script/lvl-drag-drop.js"></script>
