--- a/tests/xhr-svc-integration.html
+++ b/tests/xhr-svc-integration.html
@@ -11,24 +11,29 @@
 	<script src="../script/lvl-file-upload.js"></script>
 	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<style>
-		.lvl-upload-container {
-			width: 350px;
+		
+
+		.lvl-choose-button {
+			color: #ffffff;
+			text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+			background-color: #006dcc;
+			border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+			cursor: pointer;
+			padding: 1px 6px;
+			text-align: center;
+			border: 2px outset buttonface;
+			letter-spacing: normal;
+			word-spacing: normal;
+			text-indent: 0px;
+			display: inline-block;
+			font-weight: normal;
 		}
 
-		.lvl-file-input {
-		}
-
-		.lvl-input-button {
+		.lvl-upload-button {
 			color: #ffffff;
 			text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 			background-color: #006dcc;
 			*background-color: #0044cc;
-			background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-			background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-			background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-			background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-			background-image: linear-gradient(to bottom, #0088cc, #0044cc);
-			background-repeat: repeat-x;
 			border-color: #0044cc #0044cc #002a80;
 			border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
@@ -42,9 +47,9 @@
 
 	<div ng-controller='fuCtl' style='margin-top:50px'>
 		<lvl-file-upload
-			auto-upload='true'
-			choose-file-button-text='choose files'
-			upload-file-button-text='upload files' 
+			auto-upload='false'
+			choose-file-button-text='Choose files'
+			upload-file-button-text='Upload files' 
 			upload-url='http://localhost:3000/files' 
 			max-files='10'
 			max-file-size-mb='5'
