--- a/tag-editor.html
+++ b/tag-editor.html
@@ -7,7 +7,7 @@
 		-->
 		<script src="http://code.angularjs.org/1.0.8/angular.js"></script>
 		
-		<script src="lib/lvl-uuid.js"></script>
+		<script src="script/lvl-uuid.js"></script>
 		<script src="script/lvl-tag-editor.js"></script>
 	</head>
 	<body ng-app='tagApp' ng-controller='tagCtl'>
